# aws-sdk-test

./: Cargo.toml
src/: main.rs
