[package]
name = "aws-sdk-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sdk-imagebuilder = "0.19.0"
semver = "1.0.14"
tokio = { version = "1", features = ["full"] }
